新增会议记录

--- a/Knowledge Map System/meetings/第一次小组会议.md
+++ b/Knowledge Map System/meetings/第一次小组会议.md
@@ -1,4 +1,4 @@
-# 第一次组长会议纪要
+# 第一次小组会议纪要
 
 ### 1、会议时间
 
@@ -23,8 +23,7 @@
   |   成员   | 分工                               |
   | :----------: | ------------------------------------ |
   | 朱文烨、李志坤  | 数据爬取               |
-  | 史晨阳  | 数据建模                 |
-  | 申潇潇  | 数据补充                 |
+  | 申潇潇、史晨阳  | 数据建模                 |
   | 樊文强、黄宝锋  | 数据存储   |
   
 
