--- a/User Management System/meetings/第十周会议纪要.md
+++ b/User Management System/meetings/第十周会议纪要.md
@@ -23,9 +23,9 @@
 
 ### 二、任务布置
 
-1. 完成文物管理，用户管理，用户审核，数据备份与日志管理几个层次的list.html页面设计。
-2. 对于各个部分的增删改查进行了完善和修改
-3. 在分层架构中完成各个部分的功能实现
+1. 完成数据库的最后测试与连接操作
+2. 设计与其他子系统的集成完善
+3. 确定最终完成时间，准备队子系统进行检查汇报
 
 ## 会议总结
 
